--- a/Test/Netfix.html
+++ b/Test/Netfix.html
@@ -16,8 +16,10 @@
         background-color: black;
         height: 2000px;
         width: 2000px;
-       
         opacity: 0.8;
+        align-items: center;
+        align-self: center;
+        margin-left: 50rem;
 
 }
 .loginpage:hover{
@@ -36,6 +38,9 @@ button{
 }
 .input{
     
+height: 100px;
+width: 100px;
+padding: 3rem;
 
 
 }
